--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Preventivo/PreventivoAnalisi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Preventivo/PreventivoAnalisi.tex
@@ -66,12 +66,12 @@ Il preventivo delle ore da investire per ciascun componente del gruppo per ogni 
 \clearpage
 
 \subsubsection{Costo risultante}
-La seguente tabella rappresenta per ogni ruolo le ore totali investite e il corrispondente costo in euro:
+La seguente tabella rappresenta per ogni ruolo le ore totali investite ed il corrispondente costo in euro:
 {
 \rowcolors{2}{\evenRowColor}{\oddRowColor}
 \renewcommand{\arraystretch}{2}
 \begin{longtable}{ C{3cm} C{2cm} C{4cm}}
-\caption{Tabella del costo risultante di Analisi}\\
+\caption{Tabella del costo risultante di analisi}\\
 \rowcolor{\primaryColor}
 
 \textcolor{\secondaryColor}{\textbf{Ruolo}} & 
