--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Preventivo/PreventivoCodifica.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Preventivo/PreventivoCodifica.tex
@@ -97,7 +97,7 @@ La suddivisione delle ore preventivate per ciascun componente del gruppo e per o
 
 
 \subsubsection{Costo risultante}
-La seguente tabella rappresenta, per ruolo, le ore preventivate totali e il corrispondente costo in euro:
+La seguente tabella rappresenta, per ruolo, le ore preventivate totali ed il corrispondente costo in euro:
 {
 \rowcolors{2}{\evenRowColor}{\oddRowColor}
 \renewcommand{\arraystretch}{2}
@@ -123,7 +123,8 @@ Verificatore    & 96 & 1440 \\
 
 
 \vskip 30pt %spazio verticale
-La quantità di ore totali preventivate per ciascun ruolo viene rappresentata nel seguente areogramma:\\
+\newpage
+La quantità di ore totali preventivate per ciascun ruolo viene rappresentata nel seguente aerogramma:\\
 \includegraphics[width=1\textwidth]{./src/Preventivo/src/img/TortaSviluppo.png}
 %\begin{center}
 %	\begin{tikzpicture}
