--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Preventivo/PreventivoCollaudo.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Preventivo/PreventivoCollaudo.tex
@@ -1,4 +1,4 @@
-\subsection{Preventivo fase di Collaudo}
+\subsection{Preventivo fase di collaudo}
 
 \subsubsection{Divisione oraria}
 La seguente tabella rappresenta la distribuzione oraria dei ruoli per ogni componente del gruppo:
@@ -7,7 +7,7 @@ La seguente tabella rappresenta la distribuzione oraria dei ruoli per ogni compo
 	\rowcolors{2}{\evenRowColor}{\oddRowColor}
 \renewcommand{\arraystretch}{2}
 \begin{longtable}[h!] { C{3.5cm} C{1cm} C{1cm} C{1cm} C{1cm} C{1cm} C{1cm} C{2cm}}
-\caption{Tabella della divisione oraria di Collaudo}	\\
+\caption{Tabella della divisione oraria della fase di collaudo}	\\
 \rowcolor{\primaryColor}
 
 \textcolor{\secondaryColor}{\textbf{Membro del gruppo}} & 
@@ -33,7 +33,7 @@ La seguente tabella rappresenta la distribuzione oraria dei ruoli per ogni compo
 }
 
 
-La suddivisione delle preventivate per ciascun componente del gruppo per ogni ruolo viene rappresentata nel seguente istogramma:\\
+La suddivisione delle ore preventivate per ciascun componente del gruppo, a seconda del ruolo, viene rappresentata nel seguente istogramma:\\
 \includegraphics[width=1\textwidth]{./src/Preventivo/src/img/IstoValidazione.png}
 
 %\begin{center}
@@ -97,7 +97,7 @@ La suddivisione delle preventivate per ciascun componente del gruppo per ogni ru
 % \end{longtable}
 % }
 \subsubsection{Costo risultante}
-La seguente tabella rappresenta le ore totali investite e il corrispondente costo in euro per ogni ruolo:
+La seguente tabella rappresenta le ore totali investite ed il corrispondente costo in euro per ogni ruolo:
 {
 \rowcolors{2}{\evenRowColor}{\oddRowColor}
 \renewcommand{\arraystretch}{2}
@@ -122,7 +122,8 @@ Verificatore    &  63 & 945 \\
 }
 
 \vskip 30pt %spazio verticale
-La quantità di ore totali per ciascun ruolo viene rappresentata nel seguente areogramma:\\
+\newpage
+La quantità di ore totali per ciascun ruolo viene rappresentata nel seguente aerogramma:\\
 \includegraphics[width=1\textwidth]{./src/Preventivo/src/img/TortaValidazione.png}
 %\begin{center}
 %	\begin{tikzpicture}
