--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Preventivo/PreventivoFinale.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Preventivo/PreventivoFinale.tex
@@ -1,5 +1,5 @@
 \subsection{Preventivo a finire completo} 
-Nel preventivo riportiamo la spesa totale che il committente dovrà affrontare, derivata dal totale delle ore rendicontate e preventivate nelle fasi di Progettazione, Sviluppo,Collaudo.
+Nel preventivo riportiamo la spesa totale che il committente dovrà affrontare, derivata dal totale delle ore rendicontate e preventivate nelle fasi di progettazione, sviluppo, e collaudo.
 
 \subsubsection{Divisione oraria complessiva} 
 La seguente tabella rappresenta la distribuzione oraria dei ruoli per ogni componente del gruppo:
@@ -32,7 +32,7 @@ La seguente tabella rappresenta la distribuzione oraria dei ruoli per ogni compo
 }
 
 \subsubsection{Costo complessivo per ruolo}
-Nella seguente tabella viene illustrato il monte ore risultante per ogni ruolo con il costo ad esso associato:
+Nella seguente tabella viene illustrato il monte ore risultante per ogni ruolo con il relativo costo associato:
 {
 \rowcolors{2}{\evenRowColor}{\oddRowColor}
 \renewcommand{\arraystretch}{2}
@@ -68,8 +68,8 @@ Verificatore   &  218 & 3270 \\
 % 		}
 % 	\end{tikzpicture}
 % \end{center}
-
-Nel seguente areogramma viene rappresentata la distribuzione dei costi in percentuale sulla spesa totale da affrontare:\\
+\newpage
+Nel seguente aerogramma viene rappresentata la distribuzione dei costi in percentuale alla spesa totale da affrontare:\\
 \includegraphics[width=1\textwidth]{./src/Preventivo/src/img/TortaPrevCompleto.png}
 %\begin{center}
 %	\begin{tikzpicture}
@@ -85,7 +85,7 @@ Nel seguente areogramma viene rappresentata la distribuzione dei costi in percen
 %\end{center}
 
 \subsubsection{Costo complessivo}
-Nella seguente tabella vengono riportati i costi complessivi delle varie fasi e infine l'importo proposto da \Gruppo{} per la realizzazione del progetto \NomeProgetto{}:\\
+Nella seguente tabella vengono riportati i costi complessivi delle varie fasi e infine l'importo proposto dal gruppo \Gruppo{} per la realizzazione del progetto \NomeProgetto{}:\\
 {
 \rowcolors{2}{\evenRowColor}{\oddRowColor}
 \renewcommand{\arraystretch}{2}
