finito la verifica

--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/RegistroModifiche.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/RegistroModifiche.tex
@@ -14,7 +14,9 @@
     % usare \responsabile per indicare responsabile
 
     %		L'ultimo evento deve essere sempre all'inizio della tabella
+    1.1.0                  & 2021-03-09                                       & Verifica                         & Abdelwahad Kandoul, Elvis Murtezan                                      & \verificatore{}    \\
 
+    
     1.0.2                  & 2021-02-29                                       & Aggiornamento §4.1.1, §4.1.2                         & Giovanni Grigoletto                                      & \analista{}    \\
 
     1.0.1                  & 2021-02-25                                        & Ristrutturazione indice ed elenco dei casi d'uso                              & Alessio Trevisan, Edoardo Caregnato, Giovanni Grigoletto & \analista{}    \\
