--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/main.tex
@@ -8,6 +8,7 @@ Nella pianificazione vengono definiti tutti i passi necessari alla conclusione d
 \newpage
 \subsection{Fase di Analisi}\label{sec:Periodo 1 Analisi}
 \input{src/Pianificazione/src/Stadio1.tex}
+\newpage
 \subsection{Diagramma di Gantt delle attività della fase di Analisi}\label{sec:Gant Analisi}
 \input{src/Pianificazione/src/GanttAnalisi.tex}
 
@@ -16,7 +17,7 @@ Nella pianificazione vengono definiti tutti i passi necessari alla conclusione d
 \newpage
 \subsection{Diagramma di Gantt delle attività della fase di Progettazione}
 \label{sec:Gant Progettazione}
-%\input{src/Pianificazione/src/GanttAnalisi.tex}
+\input{src/Pianificazione/src/GanttProgettazione.tex}
     
 \subsection{Fase di Sviluppo}\label{sec:Sviluppo}
 \input{src/Pianificazione/src/Stadio5.tex}
