--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio5.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio5.tex
@@ -3,8 +3,8 @@
         \subsubsection{Periodo 1 fase di sviluppo}
         Questo periodo è relativo in gran parte allo sviluppo del codice. In questa \glo{fase} principale di sviluppo ci si concentrerà non solo sugli aspetti prettamente funzionali, ma anche, e soprattuto, sui \glo{requisiti} di tipo \glo{prestazionale}. L'obiettivo principale è dunque raggiungere una versione più aggiornata, funzionante, rifinita e sufficientemente ottimizzata del prodotto.
         \begin{itemize}
-                \item \textbf{intervallo: } 17 marzo 2021 - 31 marzo 2021;
-                \item  \textbf{Figure professionali coinvolte}
+                \item \textbf{intervallo obiettivo: } 17 marzo 2021 - 31 marzo 2021;
+                \item  \textbf{Figure professionali coinvolte:}
                 \begin{itemize}
                     \item responsabile;
                     \item amministratore;
@@ -12,7 +12,7 @@
                     \item programmatore;
                     \item verificatore.
                 \end{itemize}
-                \item \textbf{Obiettivi}
+                \item \textbf{Obiettivi:}
                 \begin{itemize}
                     \item verifica rischi occorsi e/o potenziali nella fase ed attivare l'eventuale risoluzione o prevenenzione
                     \item definizione di tutti gli incrementi di sviluppo obbligatori da soddisfare;
