--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio7.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio7.tex
@@ -1,9 +1,7 @@
-\subsubsection{Periodo 1 fase di validazione}
- L'ultimo periodo conclude la \glo{fase} di \glo{validazione} e prevede il controllo e la rifinitura generale di tutto il lavoro. L'obiettivo è perciò consegnare il progetto nella sua interezza, assicurandosi di aver soddisfatto con successo tutti i \glo{requisiti} richiesti sia dal proponente che dal committente. Gli obiettivi che si prepone fungono quindi da \glo{milestone} finale e devono essere soddisfatti conformemente a quanto richiesto dal quarto ed ultimo incontro di revisione programmato.
+L'ultimo periodo conclude la \glo{fase} di \glo{validazione} e prevede il controllo e la rifinitura generale di tutto il lavoro. L'obiettivo è perciò consegnare il progetto nella sua interezza, assicurandosi di aver soddisfatto con successo tutti i \glo{requisiti} richiesti sia dal proponente che dal committente. Gli obiettivi che si prepone fungono quindi da \glo{milestone} finale e devono essere soddisfatti conformemente a quanto richiesto dal quarto ed ultimo incontro di revisione programmato.
  \begin{itemize}
-         \item \textbf{intervallo obiettivo: } 9 aprile 2021 - 3 maggio 2021;
-         \item \textbf{intervallo massimale: } 9 aprile 2021 - 15 maggio 2021;
-         \item  \textbf{Figure professionali coinvolte}
+         \item \textbf{intervallo obiettivo: } aprile - maggio 2021;
+         \item  \textbf{Figure professionali coinvolte:}
          \begin{itemize}
             \item responsabile;
             \item amministratore;
@@ -12,13 +10,6 @@
             \item analista;
             \item verificatore.
         \end{itemize}
-         \item \textbf{Obiettivi}
-         \begin{itemize}
-            \item analisi critica rischi ed eventauli altre criticità riscontrate nella fase precedente.
-            \item aggiornamento incrementi di sviluppo relativi a requisiti obbligatori in particolare e desiderabili 
-            \item correzione della documentazione secondo le direttive del committente;
-            \begin{itemize}
-                \item con conseguente collaudo interno.
-            \end{itemize}
- \end{itemize}
+         \item \textbf{Obiettivi:}\\
+         Gli obiettivi di questa fase verranno definiti durante lo svolgersi del lavoro. 
  \end{itemize}
