aggiunti gli ultimi verbali nella tabella

--- a/DocumentiEsterni/PianoDiQualifica/src/ResocontoVerifica/src/IndiceGulpease.tex
+++ b/DocumentiEsterni/PianoDiQualifica/src/ResocontoVerifica/src/IndiceGulpease.tex
@@ -37,9 +37,12 @@ i documenti prodotti finora.
     \textit{Norme di Progetto v2.0.0}               & 72                                   & Superato{} \\
     \textit{Piano di Progetto v2.0.0}                & 65                                    & Superato{} \\
     \textit{Piano di Qualifica v2.0.0}                & 68                                    & Superato{} \\
-    \textit{Verbale Interno DA SISTEMARE}          & 72                                    & Superato{} \\
-    \textit{Verbale Esterno DA SISTEMARE}          & 74                                    & Superato{} \\
-    
+    \textit{Verbale Esterno 2021-01-22 v1.0.0}          & 71                                    & Superato{} \\
+    \textit{Verbale Interno 2020-01-29 v1.0.0}          & 69                                    & Superato{} \\
+    \textit{Verbale Interno 2020-02-10 v1.0.0}          & 73                                    & Superato{} \\
+    \textit{Verbale Esterno 2020-02-18 v1.0.0}          & 68                                    & Superato{} \\
+    \textit{Verbale Interno 2020-02-25 v1.0.0}          & 70                                    & Superato{} \\
+    \textit{Verbale Interno 2020-03-06 v1.0.0}          & 67                                    & Superato{} \\
 \end{longtable}
 
 \begin{figure}[H]
