--- a/DocumentiEsterni/PianoDiProgetto/src/ModelloSviluppo/src/Motivazioni.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/ModelloSviluppo/src/Motivazioni.tex
@@ -1,5 +1,5 @@
 Il modello incrementale presenta i seguenti pro e contro:\\
-\subsubsection{\textbf{Pro}}
+\subsubsection{Pro}
 \begin{itemize}
     \item facilita la generazione di software funzionante in modo rapido e precoce durante il ciclo di vita del software.
     \item riduce i costi di consegna iniziale;
@@ -9,18 +9,18 @@ Il modello incrementale presenta i seguenti pro e contro:\\
     \item in questo modello il proponente può dare un feedback ad ogni build.
 \end{itemize}
 
-\subsubsection{\textbf{Contro}}
+\subsubsection{Contro}
 \begin{itemize}
     \item richiede una buona pianificazione e \glo{design};
     \item necessita di una definizione chiara e completa dell'intero sistema prima che possa essere scomposto e costruito in modo incrementale;
     \item è richiesta molta esperienza nell'applicazione del modello (che il gruppo sta ancora maturando) per la sua completa padronanza.
 \end{itemize}
 
-\subsubsection{\textbf{Conclusione}}
-Questa metodologia è risultata quindi ideale perchè:
+\subsubsection{Conclusione}
+Questa metodologia è risultata quindi ideale perché:
 \begin{itemize}
     \item è necessario immettere il prima possibile il prodotto sul mercato, considerato il contesto e la possibile concorrenza nello sviluppo di applicazioni simili a quella proposta dal capitolato C1;
     \item la maggior parte dei requisiti presentati nel capitolato C1 sono chiari e ben definiti;
     \item il gruppo ha dimostrato uno spiccato interesse per l'applicazione di tale modello nonostante la scarsa esperienza, poiché l'obiettivo preposto è ambizioso e stimolante;
-    \item l'azienda proponente \proponente{}, si è dimostrata aperta al dialogo, dando la possibilita di contrattare eventuali modifiche ai \glo{requisiti}, qualora giustificate.
+    \item l'azienda proponente \proponente{}, si è dimostrata aperta al dialogo, dando la possibilità di contrattare eventuali modifiche ai \glo{requisiti}, qualora giustificate.
 \end{itemize}
