--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Consuntivo/ConsuntivoProgettazione.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Consuntivo/ConsuntivoProgettazione.tex
@@ -1,3 +1,4 @@
+\newpage
 \subsubsection{Bilancio investimento fase di progettazione}
 Il bilancio della fase di progettazione è positivo,il gruppo ha impiegato meno ore di quelle preventivate inzialmente,ma sono stati riscontrati diversi problemi.\\
 È stato cruciale fare un analisi critica della fase precedente e dei rischi che ne possono derivare,sono stati riscontrati rischi che hanno influito nella ripianificazione della fase di progettazione.
@@ -28,8 +29,12 @@ Verificatore    &  59 &  -10 & 885 & 735 & -150 \\
 \textbf{Totale} & 231 & 20 & 4463 & 4335 & -128 \\	
 \end{longtable}
 }
- Nel seguente istogramma viene rappresentata la ridistribuzione oraria e delle responsabilità(come si può notare alcuni membri del team non hanno ruotato come concordato dal team):\\
-\includegraphics[width=1\textwidth]{./src/Preventivo/src/img/istoConsuntivoProgettazioneRuoli.png}
+
+ \begin{figure}[h!]
+	\caption{Istogramma di ridistribuzione oraria e delle responsabilità relativo alla fase di progettazione}
+    \includegraphics[width=1\textwidth]{./src/Preventivo/src/img/istoConsuntivoProgettazioneRuoli.png}  
+\end{figure} 
+
 
 \subsubsection{Conclusioni}
 Come riportato dalla tabella, il bilancio risulta essere positivo per i seguenti motivi:
