--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Preventivo/PreventivoCodifica.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Preventivo/PreventivoCodifica.tex
@@ -1,4 +1,4 @@
-\subsection{Preventivo fase di Sviluppo}
+\subsection{Preventivo fase di sviluppo}
 
 \subsubsection{Divisione oraria}
 La seguente tabella rappresenta la distribuzione oraria dei ruoli per ogni componente del gruppo:
@@ -32,8 +32,12 @@ La seguente tabella rappresenta la distribuzione oraria dei ruoli per ogni compo
 }
 
 % Responsabile color=blue, Amministratore color=yellow, Analista color=red, Progettista color=green, Programmatore color=grigetto, Verificatore color=orange  [ybar, fill=] blue, yellow, red, green, grigetto, orange
-La suddivisione delle ore preventivate per ciascun componente del gruppo e per ogni ruolo viene rappresentata nel seguente istogramma:\\
-\includegraphics[width=1\textwidth]{./src/Preventivo/src/img/IstoSviluppo.png}
+
+\begin{figure}[h!]
+	\caption{Istogramma relativo alla suddivisione delle ore preventivate per ciascun componente del gruppo e per ogni ruolo nella fase di sviluppo}
+    \includegraphics[width=1\textwidth]{./src/Preventivo/src/img/IstoSviluppo.png}  
+\end{figure}
+
 %\begin{center}
 %	\pgfplotsset{width=15.4cm, height=8.5cm}
 %	\begin{tikzpicture}
@@ -122,10 +126,12 @@ Verificatore    & 96 & 1440 \\
 }
 
 
-\vskip 30pt %spazio verticale
-\newpage
-La quantità di ore totali preventivate per ciascun ruolo viene rappresentata nel seguente aerogramma:\\
-\includegraphics[width=1\textwidth]{./src/Preventivo/src/img/TortaSviluppo.png}
+
+\begin{figure}[h!]
+	\caption{Areogramma relativo alla quantità di ore totali preventivate per ciascun ruolo nella fase di sviluppo}
+    \includegraphics[width=1\textwidth]{./src/Preventivo/src/img/TortaSviluppo.png}  
+\end{figure}
+
 %\begin{center}
 %	\begin{tikzpicture}
 %		\pie[rotate = 180, color={blue, yellow, green, pink, orange}] {
