--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Preventivo/PreventivoCollaudo.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Preventivo/PreventivoCollaudo.tex
@@ -33,8 +33,10 @@ La seguente tabella rappresenta la distribuzione oraria dei ruoli per ogni compo
 }
 
 
-La suddivisione delle ore preventivate per ciascun componente del gruppo, a seconda del ruolo, viene rappresentata nel seguente istogramma:\\
-\includegraphics[width=1\textwidth]{./src/Preventivo/src/img/IstoValidazione.png}
+\begin{figure}[h!]
+	\caption{Istogramma relativo alla quantità di ore totali preventivate per ciascun ruolo nella fase di collaudo}
+    \includegraphics[width=1\textwidth]{./src/Preventivo/src/img/IstoValidazione.png}  
+\end{figure}
 
 %\begin{center}
 %	\pgfplotsset{width=15.4cm, height=8.5cm}
@@ -121,10 +123,12 @@ Verificatore    &  63 & 945 \\
 \end{longtable}
 }
 
-\vskip 30pt %spazio verticale
-\newpage
-La quantità di ore totali per ciascun ruolo viene rappresentata nel seguente aerogramma:\\
-\includegraphics[width=1\textwidth]{./src/Preventivo/src/img/TortaValidazione.png}
+
+\begin{figure}[h!]
+	\caption{Areogramma relativo alla quantità di ore totali preventivate per ciascun ruolo nella fase di collaudo}
+    \includegraphics[width=1\textwidth]{./src/Preventivo/src/img/TortaValidazione.png}  
+\end{figure}
+
 %\begin{center}
 %	\begin{tikzpicture}
 %		\pie[rotate = 180, color={blue, yellow, red, green, pink, orange}] {
