--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Preventivo/PreventivoFinale.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Preventivo/PreventivoFinale.tex
@@ -68,9 +68,12 @@ Verificatore   &  218 & 3270 \\
 % 		}
 % 	\end{tikzpicture}
 % \end{center}
-\newpage
-Nel seguente aerogramma viene rappresentata la distribuzione dei costi in percentuale alla spesa totale da affrontare:\\
-\includegraphics[width=1\textwidth]{./src/Preventivo/src/img/TortaPrevCompleto.png}
+
+
+\begin{figure}[h!]
+	\caption{Areogramma relativo la distribuzione dei costi in percentuale alla spesa totale da affrontare}
+    \includegraphics[width=1\textwidth]{./src/Preventivo/src/img/TortaPrevCompleto.png}  
+\end{figure}
 %\begin{center}
 %	\begin{tikzpicture}
 %		\pie[rotate = 180, color={blue, yellow, red, green, pink, orange}] {
