--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/main.tex
@@ -23,10 +23,14 @@ Sigle identificative per i ruoli indicati nelle tabelle e nei grafici:
 \end{longtable}
 \input{./src/Preventivo/src/Preventivo/PreventivoAnalisi.tex}
 \input{./src/Preventivo/src/Preventivo/PreventivoProgettazione.tex}
-\input{./src/Preventivo/src/Consuntivo/ConsuntivoProgettazione.tex}
 
-\section{Preventivo a finire}
 \input{./src/Preventivo/src/Preventivo/PreventivoCodifica.tex}
 \input{./src/Preventivo/src/Preventivo/PreventivoCollaudo.tex}
 
 \input{./src/Preventivo/src/Preventivo/PreventivoFinale.tex}
+
+\newpage
+\section{Consuntivo di periodo}
+\input{./src/Preventivo/src/Consuntivo/ConsuntivoAnalisi.tex}
+\input{./src/Preventivo/src/Consuntivo/ConsuntivoProgettazione.tex}
+
