--- a/DocumentiEsterni/PianoDiProgetto/src/Appendice/src/incrementi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Appendice/src/incrementi.tex
@@ -6,5 +6,11 @@
     \textcolor{\secondaryColor}{\textbf{Incremento}} & \textcolor{\secondaryColor}{\textbf{requisito backend}}  &\textcolor{\secondaryColor}{\textbf{requisiti webapp admin}}&\textcolor{\secondaryColor}{\textbf{requisito app utenti}}&\textcolor{\secondaryColor}{\textbf{costo tot. in euro}}\\ \endhead
     {Incremento 1 integrazione blockchain} & {R-numero-D-I } & {10 } & {10}&  {520}\\
     {Incremento 2 app Android lettura \glo{NFC}} & {} & {}& {}& {}\\
-    {Incremento 3 creazione interfaccia admin} & {} & {}& {}& {}\\
+    {Incremento 3 login app} & {} & {}& {}& {}\\
+    {Incremento 4 selezione data app} & {} & {}& {}& {}\\
+    {Incremento 5 selezione orario app} & {} & {}& {}& {}\\
+    {Incremento 6 creazione \glo{dashboard} admin} & {} & {}& {}& {}\\
+    
+    
+
 \end{longtable}
