--- a/DocumentiEsterni/PianoDiProgetto/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/main.tex
@@ -48,9 +48,9 @@
     \section{Preventivo}\label{sec:Preventivo}
     \input{src/Preventivo/main.tex}
 
-    %\newpage
-    %\section{Consuntivo Periodo}\label{sec:Consuntivo-periodo}
-    %\input{src/ConsuntivoPeriodo/main.tex}
+    \newpage
+    \section{Consuntivo Periodo}\label{sec:Consuntivo-periodo}
+    \input{src/Consuntivo/main.tex}
     \newpage
     \section{Organigramma}\label{sec:Organigramma}
     \input{src/Organigramma/main.tex}
