aggiornamento Registro Modifiche AdR

--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/RegistroModifiche.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/RegistroModifiche.tex
@@ -10,16 +10,20 @@
     {\textbf{Descrizione}} & \textcolor{\secondaryColor}{\textbf{Nominativo}} & \textcolor{\secondaryColor}{\textbf{Ruolo}}                                                                         \\
 
     % usare \verificatore per indicare verificatore
-    % usare \redattore per indicare redatore
+    % usare \redattore per indicare redattore
     % usare \responsabile per indicare responsabile
 
     %		L'ultimo evento deve essere sempre all'inizio della tabella
+    2.0.0                  & 2021-03-09                                       & Responsabile                                & Elvis Murtezan                                      & \responsabile{} \\
+    1.2.0                  & 2021-03-06                                        & Verifica correzioni                              & Abdelwahad Kandoul & \verificatore{}    \\
+    1.1.2                  & 2021-03-01                                       & Correzione sezione §5                              & Alessio Trevisan, Edoardo Caregnato, Giovanni Grigoletto & \analista{}    \\
+    1.1.1                  & 2021-02-26                                      & Correzione sezione §4                          & Alessio Trevisan, Edoardo Caregnato, Giovanni Grigoletto & \analista{}    \\
+    1.1.0                  & 2021-02-23                                      & Verifica                                    & Abdelwahad Kandoul                & \verificatore{} \\
+    1.0.2                  & 2021-02-20                                        & Ristrutturazione completa sezione §5                              & Alessio Trevisan, Edoardo Caregnato, Giovanni Grigoletto & \analista{}    \\
+    1.0.1                  & 2021-02-05                                      & Ristrutturazione completa sezione §4                          & Alessio Trevisan, Edoardo Caregnato, Giovanni Grigoletto & \analista{}    \\
     1.0.0                  & 2021-01-05                                       & Responsabile                                & Elvis Murtezan                                      & \responsabile{} \\
-
     0.1.0                  & 2021-01-04                                       & Verifica                                    & Elvis Murtezan, Giovanni Grigoletto                 & \verificatore{} \\
-
-    0.0.2                  & 2021-01-3                                        & stesura §4, §5                              & Alessio Trevisan, Edoardo Caregnato, Filippo Pinton & \analista{}    \\
-
-    0.0.1                  & 2020-12-23                                       & stesura §1, §2, §3                          & Filippo Pinton                                      & \analista{}    \\
+    0.0.2                  & 2021-01-03                                        & Stesura §4, §5                              & Alessio Trevisan, Edoardo Caregnato, Filippo Pinton & \analista{}    \\
+    0.0.1                  & 2020-12-23                                       & Stesura §1, §2, §3                          & Filippo Pinton                                      & \analista{}    \\
 \end{longtable}
 }
