--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/Comandi.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/Comandi.tex
@@ -1,15 +1,15 @@
 \newcommand{\Titolo}{Analisi Dei Requisiti}
 
 \newcommand{\Approvatore}{Elvis Murtezan}
-\newcommand{\Verificatori}{Andrea De Tomasi \newline Giovanni Grigoretto \newline Elvis Murtezan}
-\newcommand{\Redattori}{Alessio Trevisan \newline Edoardo Caregnato \newline Filippo Pinton}
+\newcommand{\Verificatori}{Abdelwahad Kandoul}
+\newcommand{\Redattori}{Alessio Trevisan \newline Edoardo Caregnato \newline Giovanni Grigoletto}
 
 \newcommand{\pathimg}{../../Shared/logo.png}
 
-\newcommand{\Versionedoc}{1.0.0}
+\newcommand{\Versionedoc}{2.0.0}
 
 \newcommand{\Distribuzione}{Prof. Tullio Vardanega \newline Prof. Riccardo Cardin \newline Imola informatica \newline Sweleven }
 
 \newcommand{\Uso}{Esterno}
 
-\newcommand{\DescrizioneDoc}{Lo scopo del documento è quello di descrivere in maniera dettagliata i requisiti e i casi d'uso che sono stati individuati durante lo studio del progetto \NomeProgetto.}
+\newcommand{\DescrizioneDoc}{Lo scopo del documento è quello di descrivere in maniera dettagliata i requisiti ed i casi d'uso che sono stati individuati durante lo studio del progetto \NomeProgetto.}
