--- a/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio7.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Pianificazione/src/Stadio7.tex
@@ -1,4 +1,4 @@
-L'ultimo periodo conclude la \glo{fase} di \glo{validazione} e prevede il controllo e la rifinitura generale di tutto il lavoro. L'obiettivo è perciò consegnare il progetto nella sua interezza, assicurandosi di aver soddisfatto con successo tutti i \glo{requisiti} richiesti sia dal proponente che dal committente. Gli obiettivi che si prepone fungono quindi da \glo{milestone} finale e devono essere soddisfatti conformemente a quanto richiesto dal quarto ed ultimo incontro di revisione programmato.
+L'ultimo periodo conclude la \glo{fase} di \glo{validazione} e prevede il controllo e la rifinitura generale di tutto il lavoro. L'obiettivo è perciò consegnare il progetto nella sua interezza, assicurandosi di aver soddisfatto con successo tutti i \glo{requisiti} richiesti sia dal proponente che dal committente.
  \begin{itemize}
          \item \textbf{intervallo obiettivo: } aprile - maggio 2021;
          \item  \textbf{Figure professionali coinvolte:}
