--- a/DocumentiEsterni/PianoDiProgetto/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/main.tex
@@ -49,7 +49,7 @@
     \input{src/Preventivo/main.tex}
 
     \newpage
-    \section{Consuntivo Periodo}\label{sec:Consuntivo-periodo}
+    \section{Consuntivo di periodo}\label{sec:Consuntivo di periodo}
     \input{src/Consuntivo/main.tex}
     \newpage
     \section{Organigramma}\label{sec:Organigramma}
