--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Consuntivo/ConsuntivoProgettazione.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Consuntivo/ConsuntivoProgettazione.tex
@@ -1,5 +1,4 @@
-\newpage
-\subsubsection{Bilancio investimento fase di progettazione}
+\subsection{Consuntivo fase di progettazione}
 Il bilancio della fase di progettazione è positivo,il gruppo ha impiegato meno ore di quelle preventivate inzialmente,ma sono stati riscontrati diversi problemi.\\
 È stato cruciale fare un analisi critica della fase precedente e dei rischi che ne possono derivare,sono stati riscontrati rischi che hanno influito nella ripianificazione della fase di progettazione.
 Il team ha concordato ad unanimità di ruotare i ruoli in modo solo parziale e lasciare la progettazione architetturale e lo sviluppo relativo al PoC a membri con un'esperienza
