--- a/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Consuntivo/ConsuntivoAnalisi.tex
+++ b/DocumentiEsterni/PianoDiProgetto/src/Preventivo/src/Consuntivo/ConsuntivoAnalisi.tex
@@ -1,4 +1,4 @@
-\subsubsection{Consuntivo fase di Analisi}
+\subsection{Consuntivo fase di Analisi}
 Il bilancio della fase di Analisi è positivo, ovvero il gruppo ha impiegato meno ore di quelle anticipate, quindi il costo dell'investimento finale della fase di Analisi è di poco inferiore rispetto all'investimento preventivato.\\
 La seguente tabella illustra la differenza oraria ed economica rilevata a posteriori.
 {
